Select reversible result preludes